WIP - target Gitlab 6.1
* Add certificate/key for integration testing
* Build 1.9.3-p448 per Gitlab requirements.md
* Add no-ri/no-rdoc options, per installation.md,
  also speeds up convergence.
* Re-order steps per installation.md
* Add autocrlf option to gitconfig, per installation.md
* Update mysql privileges per database.md

TODO:

* Gitlab init not working on RHEL 6
* Update README.md

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,7 +3,7 @@ driver_plugin: vagrant
 driver_config:
   require_chef_omnibus: latest
   customize:
-    memory: 1024
+    memory: 1024 
 
 platforms:
 - name: ubuntu-13.04
@@ -33,6 +33,8 @@ platforms:
 
 suites:
 - name: default
+  data_bag_path: "test/integration/default/data_bags"
+  encrypted_data_bag_secret_key_path: "test/integration/default/encrypted_data_bag_secret"
   run_list: ["recipe[mysql::server]", "recipe[gitlab]"]
   attributes:
     mysql:
@@ -41,6 +43,9 @@ suites:
       server_root_password: test
       server_repl_password: test
     gitlab:
+      https: true
+      certificate:
+        databag_id: test
       database:
         password: test
     authorization:
