--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,30 +9,43 @@ platforms:
 - name: ubuntu-13.04
   driver_config:
     network:
-    - ["forwarded_port", {guest: 80, host: 8080}]
+    - ["forwarded_port", {guest: 80, host: 8080, guest: 443, host: 8443}]
   run_list:
   - recipe[apt]
 - name: ubuntu-12.04
   driver_config:
     network:
-    - ["forwarded_port", {guest: 80, host: 8081}]
+    - ["forwarded_port", {guest: 80, host: 8081, guest: 443, host: 8444}]
   run_list:
   - recipe[apt]
 - name: ubuntu-10.04
   driver_config:
     network:
-    - ["forwarded_port", {guest: 80, host: 8082}]
+    - ["forwarded_port", {guest: 80, host: 8082, guest: 443, host: 8445}]
   run_list:
   - recipe[apt]
 - name: centos-6.4
   driver_config:
     network:
-    - ["forwarded_port", {guest: 80, host: 8083}]
+    - ["forwarded_port", {guest: 80, host: 8083, guest: 443, host: 8446}]
   run_list:
   - recipe[yum::epel]
 
 suites:
 - name: default
+  run_list: ["recipe[mysql::server]", "recipe[gitlab]"]
+  attributes:
+    mysql:
+      server_debian_password: test
+      server_backup_password: test
+      server_root_password: test
+      server_repl_password: test
+    authorization:
+      sudo:
+        groups:
+        - sudo
+        - wheel
+- name: https
   data_bag_path: "test/integration/default/data_bags"
   encrypted_data_bag_secret_key_path: "test/integration/default/encrypted_data_bag_secret"
   run_list: ["recipe[mysql::server]", "recipe[gitlab]"]
@@ -44,8 +57,7 @@ suites:
       server_repl_password: test
     gitlab:
       https: true
-      certificate:
-        databag_id: test
+      certificate_databag_id: test
       database:
         password: test
     authorization:
