--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ gemfile:
   - test/support/Gemfile
 rvm:
   - 1.9.3
-script: BUNDLE_GEMFILE=test/support/Gemfile bundle exec rake foodcritic
+script: BUNDLE_GEMFILE=test/support/Gemfile bundle exec rake 
