--- a/test/support/Gemfile
+++ b/test/support/Gemfile
@@ -1,4 +1,7 @@
 source "https://rubygems.org"
 
 gem 'rake'
-gem 'foodcritic'
+gem 'berkshelf'
+gem 'chefspec'
+gem 'foodcritic', '~> 3.0.0'
+gem 'rubocop'
