--- a/test/support/Gemfile
+++ b/test/support/Gemfile
@@ -1,7 +1,6 @@
 source "https://rubygems.org"
 
-gem 'rake'
-gem 'berkshelf'
+gem 'berkshelf', '~> 2.0.10'
 gem 'chefspec'
 gem 'foodcritic', '~> 3.0.0'
 gem 'rubocop'
