--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,7 +1,7 @@
 ---
 driver_plugin: vagrant 
 driver_config:
-  require_chef_omnibus: latest
+  require_chef_omnibus: '11.8.2'
   customize:
     memory: 1024 
 
