--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: ruby
-gemfile:
-  - test/support/Gemfile
 rvm:
   - 1.9.3
-script: BUNDLE_GEMFILE=test/support/Gemfile bundle exec rake 
+install: bundle install --without integration
+script: bundle exec rake
