--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,12 +1,12 @@
 ---
 driver_plugin: vagrant 
 driver_config:
-  require_chef_omnibus: '11.8.2'
+  #require_chef_omnibus: '11.8.2'
   customize:
-    memory: 1024 
+    memory: 1024
 
 platforms:
-- name: ubuntu-13.04
+- name: ubuntu-14.04
   driver_config:
     network:
     - ["forwarded_port", {guest: 80, host: 8080}]
