--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -28,7 +28,7 @@ platforms:
 
 suites:
 - name: default
-  run_list: ["recipe[mysql::server]", "recipe[gitlab]"]
+  run_list: ["recipe[database::mysql]", "recipe[gitlab]"]
   attributes:
     mysql:
       server_debian_password: test
