--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -29,6 +29,8 @@ suites:
 - name: default
   run_list: ["recipe[gitlab]"]
   attributes:
+    mysql:
+      server_root_password: test
     gitlab:
       database:
         host: 127.0.0.1
@@ -43,6 +45,8 @@ suites:
   encrypted_data_bag_secret_key_path: "test/integration/https/encrypted_data_bag_secret"
   run_list: ["recipe[gitlab]"]
   attributes:
+    mysql:
+      server_root_password: test
     gitlab:
       https: true
       certificate_databag_id: test
