--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,13 +12,19 @@ platforms:
     - ["forwarded_port", {guest: 443, host: 8443}]
   run_list:
   - recipe[apt]
+  #attributes:
+    #apt:
+    #- compile_time_update: true
 - name: ubuntu-12.04
   driver_config:
     network:
     - ["forwarded_port", {guest: 80, host: 8081}]
     - ["forwarded_port", {guest: 443, host: 8444}]
   run_list:
-  - recipe[apt]
+    - recipe[apt]
+  #attributes:
+    #apt:
+    #- compile_time_update: true
 - name: centos-7.1
   driver_config:
     network:
