--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,6 +4,9 @@ driver_config:
   customize:
     memory: 1024
 
+provisioner:
+  name: chef_zero
+
 platforms:
 - name: ubuntu-14.04
   driver_config:
@@ -40,12 +43,9 @@ suites:
 - name: default
   run_list: ["recipe[gitlab]"]
   attributes:
-    mysql:
-      server_root_password: test
     gitlab:
       database:
-        host: 127.0.0.1
-        password: test
+        type: postgres
     authorization:
       sudo:
         groups:
@@ -56,11 +56,8 @@ suites:
   encrypted_data_bag_secret_key_path: "test/integration/https/encrypted_data_bag_secret"
   run_list: ["recipe[gitlab]"]
   attributes:
-    mysql:
-      server_root_password: test
     gitlab:
       https: true
       certificate_databag_id: test
       database:
-        host: 127.0.0.1
-        password: test
+        type: postgres
